tests/neg/parser-stability-23.scala
object i0 {
  import Ordering.{ implicitly as } (true: Boolean) match { case _: i1 as true } // error // error // error
}
